# Encrypted-RAG-Backend

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: aws.yml  task-definition.json
src/: app.py  k8s_routes.py
src/data/: example.txt
src/embeddings/: routes.py  types.py
src/queries/: routes.py  types.py
src/utils/: constants.py  pinecone_ops.py  rag.py
